Keyboard och mouseinput implementerade samt Global Timer för att input ska kunna fungera. WASD / Piltangenterna roterar vår quad, ska ändras till cameracontrol senare.

--- a/DV1542-Projekt/DV1542-Projekt.vcxproj
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj
@@ -179,6 +179,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deferred.h" />
+    <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
