Added NoiseGenerator.h, lade till lite #ifndefs och fixade så att kameran inte kan gå över/under 90 grader i pitch.

--- a/DV1542-Projekt/DV1542-Projekt.vcxproj
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="D3D.h" />
     <ClInclude Include="Deferred.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="NoiseGenerator.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
