--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -52,5 +52,8 @@
     <ClInclude Include="D3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NoiseGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
