NoiseGenerator implementerad, genererar helt random texture i format R16_FLOAT

--- a/DV1542-Projekt/DV1542-Projekt.vcxproj
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="D3D.cpp" />
     <ClCompile Include="Deferred.cpp" />
+    <ClCompile Include="NoiseGenerator.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
