skapade två nya pixelshaders och fixade en sampler i deferred.

--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -35,6 +35,8 @@
     <FxCompile Include="PixelShader.hlsl" />
     <FxCompile Include="GeometryShader.hlsl" />
     <FxCompile Include="VertexShader.hlsl" />
+    <FxCompile Include="PixelShaderGeometry.hlsl" />
+    <FxCompile Include="PixelShaderLight.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deferred.h">
