--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -37,6 +37,7 @@
     <FxCompile Include="VertexShader.hlsl" />
     <FxCompile Include="PixelShaderGeometry.hlsl" />
     <FxCompile Include="PixelShaderLight.hlsl" />
+    <FxCompile Include="VertexShaderLight.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deferred.h">
