--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -68,5 +68,6 @@
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
