--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -37,10 +37,10 @@
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl" />
     <FxCompile Include="GeometryShader.hlsl" />
-    <FxCompile Include="VertexShader.hlsl" />
     <FxCompile Include="PixelShaderGeometry.hlsl" />
     <FxCompile Include="PixelShaderLight.hlsl" />
     <FxCompile Include="VertexShaderLight.hlsl" />
+    <FxCompile Include="VertexShaderGeometryAndHeightmap.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deferred.h">
