--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Deferred.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -33,14 +30,20 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SkyBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl" />
-    <FxCompile Include="GeometryShader.hlsl" />
-    <FxCompile Include="PixelShaderGeometry.hlsl" />
-    <FxCompile Include="PixelShaderLight.hlsl" />
-    <FxCompile Include="VertexShaderLight.hlsl" />
-    <FxCompile Include="VertexShaderGeometryAndHeightmap.hlsl" />
+    <FxCompile Include="PS_Terrain.hlsl" />
+    <FxCompile Include="VS_Terrain.hlsl" />
+    <FxCompile Include="PS_Light.hlsl" />
+    <FxCompile Include="VS_Light.hlsl" />
+    <FxCompile Include="GS_Terrain.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deferred.h">
@@ -65,6 +68,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\DirectXTex-master\DirectXTex\DirectXTex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SkyBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
