--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -44,6 +44,8 @@
     <FxCompile Include="PS_Light.hlsl" />
     <FxCompile Include="VS_Light.hlsl" />
     <FxCompile Include="GS_Terrain.hlsl" />
+    <FxCompile Include="VS_GenericObject.hlsl" />
+    <FxCompile Include="PS_GenericObject.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deferred.h">
