utökat shadowmap lite och tagit bort vissa kommentarer, försökte flytta över ljusberäkningarna från PS_Terrain till PS_Light men då försvann björnen och kuben HJÄÄÄÄÄÄÄÄLP

--- a/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="SkyBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shadowmap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl" />
@@ -46,6 +49,8 @@
     <FxCompile Include="GS_Terrain.hlsl" />
     <FxCompile Include="VS_GenericObject.hlsl" />
     <FxCompile Include="PS_GenericObject.hlsl" />
+    <FxCompile Include="PS_Shadow.hlsl" />
+    <FxCompile Include="VS_Shadow.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Deferred.h">
@@ -73,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OBJLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Shadowmap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
