QuadTree tar nu en vector med MeshObjects som parameter i konstruktorn och noderna skickar sedan vidare dem rekursivt tills de hamnar där de ska

--- a/DV1542-Projekt/DV1542-Projekt.vcxproj
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="NoiseGenerator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
+    <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Shadowmap.cpp" />
     <ClCompile Include="TreeNode.cpp" />
     <ClCompile Include="Window.cpp" />
