--- a/DV1542-Projekt/DV1542-Projekt.vcxproj
+++ b/DV1542-Projekt/DV1542-Projekt.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="D3D.cpp" />
     <ClCompile Include="Deferred.cpp" />
+    <ClCompile Include="Frustum.cpp" />
     <ClCompile Include="MeshObject.cpp" />
     <ClCompile Include="NoiseGenerator.cpp" />
     <ClCompile Include="main.cpp" />
@@ -251,6 +252,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="D3D.h" />
     <ClInclude Include="Deferred.h" />
+    <ClInclude Include="Frustum.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="NoiseGenerator.h" />
     <ClInclude Include="MeshObject.h" />
