Fixade min fuckade skit

--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,7 @@ paket-files/
 .idea/
 *.sln.iml
 /Här testar vi
+/FY1412 Projekt - Jacob Ahnstedt, Michael Lindroth, Rikard Magnom/FY1412-Projekt
+/DV1504Grupp1
+/DV2578-Assignment1
+/FY1412-Projekt
